--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "termchatter_GrimmTMM"
-version = "0.0.1"
+name = "termchatter"
+version = "0.0.2"
 authors = [
   { name="GrimmTMM", email="themagnetboy1207@gmail.com" },
 ]
@@ -18,16 +18,12 @@ dependencies = [
 ]
 
 [project.scripts]
-main = "termchatter:main"
+termchatter = "termchatter:main"
 
 [project.urls]
 Homepage = "https://github.com/GrimmTMM/termchatter"
 Issues = "https://github.com/GrimmTMM/termchatter/issues"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-ignore-vcs = true
-include = ["src/**"]
+requires = ["flit_core<4"]
+build-backend = "flit_core.buildapi"
